# Tats

./: README.md  pyproject.toml
data/: dev_outputs.tsv  tat_texts.jsonl
src/tatary/: jsonl.py  main.py  remove_matuki.py  submission.py
src/tatary/config/: config.py
src/tatary/inference/: __init__.py  baselineAgent.py  inferencer.py
src/tatary/model/: model.py
src/tatary/solutions/: __init__.py  baseline.py  yandex_gpt.py
